--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,7 @@
                 <p>Suspecting your mate of having an affair can be a very emotionally overwhelming experience. To be sure of anything you need facts. We will investigate the suspicious activity, helping you attain the truth you need to make important decisions in your life."</p>
                 <div class="btns">
                     <a class="book" href="#contact-form">Book</a>
-                    <a href="/read/Adultery Affair Infidelity Investigation">Read more</a>
+                    <a href="/read/adultery-affair-infidelity-investigation">Read more</a>
                 </div>
             </div>
             <div class="service">
@@ -45,7 +45,7 @@
                 <p>You might be feeling suspicious about your spouse. Perhaps he's never told you his home phone number. Maybe she avoids introducing you to her friends. Possibly you don't even know where he lives, or worry that she might be lying to you about being divorced</p>
                 <div class="btns">
                     <a class="book" href="#contact-form">Book</a>
-                    <a href="#">Read more</a>
+                    <a href="/read/pre-matrimonial-investigation">Read more</a>
                 </div>
             </div>
             <div class="service">
@@ -54,7 +54,7 @@
                 <p>Divorces are complicated, sensitive, and sometimes dangerous depending on the nature of your divorce investigation. VIS can help you with a thorough and discreet divorce investigations such as evidence on infidelity, child custody issues</p>
                 <div class="btns">
                     <a class="book" href="#contact-form">Book</a>
-                    <a href="#">Read more</a>
+                    <a href="/read/post-marriage-divorce-investigation">Read more</a>
                 </div>
             </div>
             <div class="service">
@@ -63,7 +63,7 @@
                 <p>With smartphones functioning more like computers, spyware has become an increasing threat to cell phone users. If you think someone has put spyware on your cell phone, contact MS Detective for a free consultation to find out how we can remove the malicious software for you.</p>
                 <div class="btns">
                     <a class="book" href="#contact-form">Book</a>
-                    <a href="#">Read more</a>
+                    <a href="/read/cellphone-spyware-detection">Read more</a>
                 </div>
             </div>
             <div class="service">
@@ -72,7 +72,7 @@
                 <p>Surveillance / Shadowing is the monitoring of behavior without the target being made aware that they are being monitored, and tailing is a specific method of following an individual to gather information about their activities.</p>
                 <div class="btns">
                     <a class="book" href="#contact-form">Book</a>
-                    <a href="#">Read more</a>
+                    <a href="/read/surveillance-shadowing">Read more</a>
                 </div>
             </div>
             <div class="service">
@@ -81,7 +81,7 @@
                 <p>At MS Detective, we attempt to maintain an extensive listing of case types and services, to make it very easy to tell you what we offer so you use our free consultation system without any additional effort. However, every individual is unique,</p>
                 <div class="btns">
                     <a class="book" href="#contact-form">Book</a>
-                    <a href="#">Read more</a>
+                    <a href="/read/other-cases">Read more</a>
                 </div>
             </div>
             <div class="service">
@@ -91,7 +91,7 @@
                     Surveillance is a generic term for all types of watching and monitoring. One definition is the secret, continuous, periodic watching of persons</p>
                 <div class="btns">
                     <a class="book" href="#contact-form">Book</a>
-                    <a href="#">Read more</a>
+                    <a href="/read/surveillance-detection">Read more</a>
                 </div>
             </div>
             <div class="service">
@@ -100,7 +100,7 @@
                 <p>Being the victim of an affair is never easy, but finding out that your partner is cheating on you with another member of their same sex is even harder. A shockingly high number of women have been in relationship with men who have had sexual relations with another man.</p>
                 <div class="btns">
                     <a class="book" href="#contact-form">Book</a>
-                    <a href="#">Read more</a>
+                    <a href="/read/gay-spouse-investigation">Read more</a>
                 </div>
             </div>
             <div class="service">
@@ -109,7 +109,7 @@
                 <p>Computer spyware is typically malicious in nature and can compromise your personal data. If your machine is acting abnormally you should have the computer checked for Spyware. Spyware is a software that secretly gathers</p>
                 <div class="btns">
                     <a class="book" href="#contact-form">Book</a>
-                    <a href="#">Read more</a>
+                    <a href="/read/computer-spyware-detection">Read more</a>
                 </div>
             </div>
             <div class="service">
@@ -118,7 +118,7 @@
                 <p>You may doubt about the authentication of any information. Rely on us. We shall find out the true picture so that there is no need to take everything on the face value. Fact finding could be of any nature and type. We would authenticate particular information</p>
                 <div class="btns">
                     <a class="book" href="#contact-form">Book</a>
-                    <a href="#">Read more</a>
+                    <a href="/read/fact-finding">Read more</a>
                 </div>
             </div>
         </div>
