--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -128,6 +128,7 @@ nav {
     .navi ul {
         width: 100%;
         height: 100%;
+        max-height: 600px;
         flex-direction: column;
         justify-content: flex-start;
         background-color: #333;
@@ -135,9 +136,8 @@ nav {
     .navi ul li {
         width: 100%;
         height: 25%;
-        max-height: 100px;
+        min-height: 120px;
         /* background-color: white; */
-        /* max-height: 130px; */
     }
     .navi ul li a {
         display: none;
